[tool.poetry]
name = "poetry add openai"
version = "0.1.0"
description = ""
authors = ["TotyoMaystorski <555089@student.saxion.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
